update crum, vycichl

--- a/coptic/vycichl/index.html
+++ b/coptic/vycichl/index.html
@@ -897,7 +897,7 @@
 				<li><b>Allongement:</b> accroissement de durée d'un phonème. Les voyelles brèves des syllabes accentuées ont été allongées avec l'entrée en vigueur de la <i>loi syllabique:</i> <i class="egypt-translit d">káꜣim</i> «vigne», puis <i class="egypt-translit p">kāꜣim</i>.</li>
 				<li>Collectif: forme exprimant un certain nombre de personnes, d'objets ou d'une certaine quantité d'une matière: égyptien <i class="phoneme">rmṯ-(y).t</i> «hommes», <i class="phoneme">ẖrd-y.t</i> «enfants». Le contraire du collectif est le nom d'unité.
 					<ul>
-						<li>En arabe <i class="phoneme">baṣal</i> (m.) signifie «oignons» (coll.), tandis que <i class="phoneme"></i>baṣal-a.t</i> (f.), «un oignon», est le nom d'unité.</li>
+						<li>En arabe <i class="phoneme">baṣal</i> (m.) signifie «oignons» (coll.), tandis que <i class="phoneme">baṣal-a.t</i> (f.), «un oignon», est le nom d'unité.</li>
 					</ul>
 				</li>
 				<li>Compensation des géminées: (1) dans l'ancienne langue les géminations post-toniques sont compensées par l'allongement de la voyelle précédente, par ex. <i class="phoneme p">Kumm-a.t</i> «Égypte» (prononcé: <i class="phoneme p">Kömm-a.t</i>): ⲕⲏⲙⲉ (<span class="dialect">S</span>), primitivement <i class="phoneme p">Kȫme</i>; (2) au Nouvel Empire des géminations (<i class="phoneme">XX</i>) sont remplacées par aleph + consonne (<i class="phoneme">ꜣX</i>): <i class="phoneme p">yarro</i> «canal»: <i class="phoneme p">yaꜣro</i>, puis ⲉⲓⲟⲟⲣ (<span class="dialect">S</span>).</li>
@@ -1441,7 +1441,6 @@
 					<tr>
 						<td class="term">appeler</td><td class="middle"></td><td class="page">124, 251</td>
 					</tr>
-					<!--
 					<tr>
 						<td class="term">appeler, nommer</td><td class="middle"></td><td class="page">176</td>
 					</tr>
@@ -1742,7 +1741,6 @@
 					<tr>
 						<td class="term">autre</td><td class="middle"></td><td class="page">70</td>
 					</tr>
-					--><!-- --><!--
 					<tr>
 						<td class="term">avaler</td><td class="middle"></td><td class="page">249</td>
 					</tr>
@@ -1764,6 +1762,7 @@
 					<tr>
 						<td class="term">avec, ayant, possédant</td><td class="middle"></td><td class="page">284</td>
 					</tr>
+					<!--
 					<tr>
 						<td class="term">aveugle</td><td class="middle"></td><td class="page">27</td>
 					</tr>
