--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -102,7 +102,7 @@
 						<li><div class="cell"></div><div class="cell"><span class="abbr">BIF</span> = <i>Bulletin de l'Instit. français…au Caire</i>.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">BKU</span> = Berliner <i>Kopt. Urkunden</i>, acc. to vol., no. and, in long texts, lines.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/MN41447ucmf_1" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">Blake</span> = Epiphanius, <i>De XII Gemmis</i>, ed. R. P. Blake, Coptic fragts. by H. De Vis, 1934 (in Lake's <i>Studies &amp; Documents</i>).</div></li>
-						<li><div class="cell"></div><div class="cell"><span class="abbr">BM</span> = British Museum, <i>Catalogue of Coptic MSS.</i>, 1905, acc. to numbers.</div></li>
+						<li><div class="cell"><a href="https://archive.org/details/catalogueofcopti00brituoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">BM</span> = British Museum, <i>Catalogue of Coptic MSS.</i>, 1905, acc. to numbers.</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/CopticMartyrdomshighResByEWallisBudgeVol01" class="source" target="_blank"></a></div><div class="cell"> <span class="abbr">BMar</span> = Budge, <i>Coptic Martyrdoms</i>, 1914.</div></li>
 						<li><div class="cell"></div><div class="cell"><span class="abbr">BMEA</span> = British Museum, Dept. of Egyptian &amp; Assyr. Antiquities (papyri, ostraca, inscriptions).</div></li>
 						<li><div class="cell"><a href="https://archive.org/details/miscellaneouscop00budguoft" class="source" target="_blank"></a></div><div class="cell"><span class="abbr">BMis</span> = Budge, <i>Miscellaneous Coptic Texts</i>, 1915.</div></li>
