--- a/coptic/vycichl/index.html
+++ b/coptic/vycichl/index.html
@@ -15272,11 +15272,12 @@
 				<h4>b. Hébreu</h4>
 				<table>
 					<tr>
-						<td class="term">אָבָה</td><td class="middle">ʾābāh</td><td class="page">38</td>
+						<td class="term"><span class="hebrew">אָבָה</span></td><td class="middle"><i>ꜣābāh</i></td><td class="page">38</td>
 					</tr>
 					<tr>
-						<td class="term">אֶבְיון</td><td class="middle">ʾebyōn</td><td class="page">38</td>
+						<td class="term"><span class="hebrew">אֶבְיון</span></td><td class="middle"><i>ꜣebyōn</i></td><td class="page">38</td>
 					</tr>
+				<!--
 					<tr>
 						<td class="term">אֶ‌ֽבֶן</td><td class="middle">ʾèben</td><td class="page">154, 249</td>
 					</tr>
@@ -16288,6 +16289,7 @@
 					<tr>
 						<td class="term">תְּשׁוּבָה</td><td class="middle">tĕšūbā</td><td class="page">240</td>
 					</tr>
+					-->
 				</table>
 			</div>
 			<div id="langues_chamitiques">
