update vycichl, westendorf

--- a/coptic/vycichl/index.html
+++ b/coptic/vycichl/index.html
@@ -17987,6 +17987,10 @@
 		</div>
 		<div id="notes_additionnelles">
 			<h2>Notes Additionnelles</h2>
+			<ul>
+				<li></li>
+				<li></li>
+			</ul>
 		</div>
 		<div id="formes_grecques">
 			<h2>Formes Grecques</h2>
@@ -18018,7 +18022,7 @@
 			</ul>
 		</div>
 		<div id="carte">
-		
+			<img src="images/carte.png">
 		</div>
 		<script src="../../scripts/scripts.js"></script>
 	</body>
