--- a/coptic/westendorf/index.html
+++ b/coptic/westendorf/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h1>Koptisches Handwörterbuch<br><span>von Wolfhart Westendorf</span></h1>
+		<h1>Koptisches Handwörterbuch<br><span>von</span><br><span>Wolfhart Westendorf</span></h1>
 		<div id="inhaltsubersicht">
 			<h2>Inhaltsübersicht</h2>
 			<ul id="toc">
@@ -1240,5 +1240,6 @@
 				
 			</div>
 		</div>
+		<script src="../../scripts/scripts.js"></script>
 	</body>
 </html>
