update home, crum, vycichl, westendorf

--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -15,7 +15,7 @@
 				<li>Dictionary</li>
 			</ul>
 		</div>
-		<div id="preface">
+		<div id="preface" class="collapse">
 			<h2>Preface</h2>
 			<p>Preparations for systematic work with a view to a Coptic dictionary were begun by me some thirty years ago, but intervening undertakings delayed effective progress for some time. Meanwhile it was ascertained that the Clarendon Press would be not unwilling to consider, when the time came, a project of publication. But early in 1914 a definite proposal to publish, at their expense and with provision of funds for collaboration, photography &amp;c., came from the Berlin Academy. This generous offer I owed to Professor Erman, who saw the need of a Coptic dictionary on a scale worthy of that of the hieroglyphic <i>Wörterbuch</i> and who issued a statement on the subject. <sup id="cite_ref-01"><a href="#cite_note-01">[1]</a></sup> A scheme was drawn up and work begun <sup id="cite_ref-02"><a href="#cite_note-02">[2]</a></sup> and if the outbreak of war had not put an end to all hopes of carrying through such projects, the book would have been completed long ere now. Yet it was found possible to retain the help of German collaborators, as well as of those in the allied countries, and a few years after the end of the war a collection of material had been amassed large enough to justify a renewal of negotiations with the Clarendon Press. These resulted in the arrangement whereby the dictionary is now published.</p>
 			<p>In 1921 the late Professor Spiegelberg produced his <i>Handwörterbuch</i>, which he modestly described as a revision of Peyron's <i>Lexicon</i> (1835), but which in reality is far more than that. Its most conspicuous novelty was the addition, in all cases where in the author's opinion justifiable, of the hieroglyphic or demotic etymology of the Coptic form. The absence of this important element from the present work some students may regret; it was only after much hesitation that I decided to omit it. I cannot claim an independent judgement as to the appositeness of a demotic etymology, while to reproduce these in hieroglyphic type—for a mere transcription satisfies no one—would greatly have increased costs and yet have added nothing of adequate importance to what Spiegelberg has already given us. <sup id="cite_ref-03"><a href="#cite_note-03">[3]</a></sup></p>
@@ -59,7 +59,7 @@
 				<li id="cite_note-15"><span class="cite-backlink"><a href="#cite_ref-15">^</a></span>The vellum leaves Mich 550 were subsequently numbered Mich 158, an alteration which I overlooked. The Librarian has, however, kindly arranged to leave the number 550 unused.</li>
 			</ol>
 		</div>
-		<div id="list_of_abbreviations">
+		<div id="list_of_abbreviations" class="collapse">
 			<h2>List of Abbreviations</h2>
 			<ul>
 				<li id="all">
@@ -549,7 +549,7 @@
 				</li>
 			</ul>
 		</div>
-		<div id="additions_and_corrections">
+		<div id="additions_and_corrections" class="collapse">
 			<h2>Additions and Corrections</h2>
 			<p><i>a</i>, <i>b</i> refer to columns 1 &amp; 2.</p>
 			<ul>
@@ -2152,6 +2152,102 @@
 														<li>J 38 25 <i class="dialect">S</i> all property <span class="coptic">ϫⲓⲛⲟⲩⲕⲟⲩⲓ ϣⲁⲟⲩⲛ.</span>,</li>
 														<li>BM 511 <i class="dialect">F</i> bless <span class="coptic">ⲛⲉⲕⲟⲩⲓ ⲙⲛⲛⲉⲛ.</span>,</li>
 														<li>Miss 8 53 <i class="dialect">S</i> only 30 condemn Cyril, but <span class="coptic">ϯⲛ.</span> <i>majority</i> Nestorius;</li>
+													</ul>
+												</li>
+												<li class="subsection">as advb <i>greatly</i>:
+													<ul>
+														<li class="group">
+															<ul>
+																<li>Bor 263 22 <i class="dialect">S</i> <span class="coptic">ϣⲁϥⲙⲉ ⲛⲟⲩⲛ.</span> (<i>cf</i> Lu 7 47 <span class="coptic">ⲉⲙⲁⲧⲉ</span> <span class="greek">πολύ</span>),</li>
+																<li>Jth 13 1 <i class="dialect">S</i> <span class="coptic">ⲉⲩⲛ.</span> <span class="greek">ἐπὶ πλεῖον</span>).</li>
+															</ul>
+														</li>
+													</ul>
+												</li>
+											</ul>
+										</li>
+										<li class="subsection"><span class="coptic">ⲙⲛⲧ-</span>, <span class="coptic">ⲙⲉⲧⲛ.</span> <i class="dialect">S</i><i class="dialect lycopolitan">A<sup>2</sup></i><i class="dialect">B</i><i class="dialect">F</i>, <i>greatness</i>, <i>seniority</i>:
+											<ul>
+												<li class="group">
+													<ul>
+														<li>Deu 32 4 <i class="dialect">S</i><i class="dialect">B</i>,</li>
+														<li>Ps 78 11 <i class="dialect">S</i><i class="dialect">B</i>,</li>
+														<li>He 8 1 <i class="dialect">S</i><i class="dialect">B</i><i class="dialect">F</i> <span class="greek">μεγαλοσύνη</span>,</li>
+														<li>Sa 13 5 <i class="dialect">S</i>,</li>
+														<li>Eph 1 19 <i class="dialect">B</i><i class="dialect">F</i> (<i class="dialect">S</i> <span class="coptic">ϭⲟⲧ</span>),</li>
+														<li>BMar 105 <i class="dialect">S</i> <span class="greek">μέγεθος</span>,</li>
+														<li>Ps 70 19 <i class="dialect">S</i><i class="dialect">B</i>,</li>
+														<li>Ap 11 <i class="dialect lycopolitan">A<sup>2</sup></i> <span class="greek">μεγαλεῖος</span>,</li>
+														<li>Ps 28 5 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ⲛ.</span>),</li>
+														<li><i>ib</i> 144 12 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ⲙⲉⲧⲛ. ⲙⲙⲉⲧⲥⲁⲓⲉ</span>) <span class="greek">μεγαλοπρέπεια</span>,</li>
+														<li>Jer 40 9 <i class="dialect">B</i>,</li>
+														<li>Lu 9 43 <i class="dialect">S</i><i class="dialect">B</i> <span class="greek">μεγαλειότης</span>,</li>
+														<li>Ps 105 21 <i class="dialect">S</i><i class="dialect">B</i>,</li>
+														<li>Va 57 15 <i class="dialect">B</i> <span class="coptic">ⲙⲉⲩⲓ ⲉⲟⲩⲙ.</span> <span class="greek">μέγας</span>,</li>
+														<li>Nu 6 2 <i class="dialect">B</i> <span class="coptic">ϧⲉⲛⲟⲩⲙ.</span> (<i class="dialect">S</i> <span class="coptic">ⲉⲙⲁϣⲟ</span>) <span class="greek">μεγάλως</span>;</li>
+													</ul>
+												</li>
+												<li class="group">
+													<ul>
+														<li>Ge 43 33 <i class="dialect">B</i>,</li>
+														<li>JA '75 5 219 <i class="dialect">S</i> <span class="coptic">ⲙⲙ.</span> <i>precedence</i> among the churches <span class="greek">τὰ πρεσβεῖα</span>;</li>
+													</ul>
+												</li>
+												<li class="group">
+													<ul>
+														<li>Si 7 2 <i class="dialect">S</i> <span class="greek">ἡγεμονία</span>;</li>
+													</ul>
+												</li>
+												<li class="group">
+													<ul>
+														<li>1 Tim 2 2 <i class="dialect">S</i> (<i class="dialect">B</i> <span class="coptic">ⲉⲧϭⲟⲥⲓ</span>) <span class="greek">ὑπεροχή</span>;</li>
+													</ul>
+												</li>
+												<li class="group">
+													<ul>
+														<li>2 Cor 4 7 <i class="dialect">B</i> (<i class="dialect">S</i> <span class="coptic">ϩⲟⲩⲟ</span>) <span class="greek">ὑπερβολή</span>;</li>
+													</ul>
+												</li>
+												<li class="group">
+													<ul>
+														<li>Z 301 <i class="dialect">S</i> <span class="greek">ἀρχή</span>;</li>
+													</ul>
+												</li>
+												<li class="group">
+													<ul>
+														<li>Dan 4 8 <i class="dialect">B</i> <span class="greek">κύτος</span> (reading <span class="greek">κῦδος</span>);</li>
+													</ul>
+												</li>
+												<li class="group">
+													<ul>
+														<li>ShC 73 167 <i class="dialect">S</i> rendering account <span class="coptic">ϩⲁⲡⲉⲓϩⲱⲃ ϫⲉⲙ.</span> <i>sc</i> office of abbot,</li>
+														<li>DeV 2 5 <i class="dialect">B</i> <span class="coptic">ⲑⲙ. ⲙⲡⲁⲝⲓⲱⲙⲁ</span> of Word,</li>
+														<li>Bor 256 152 <i class="dialect">S</i> to king <span class="coptic">ⲁⲧⲉⲕⲙ. ϫⲟⲟⲩ</span>,</li>
+														<li>BSM 16 <i class="dialect">B</i> <span class="coptic">ⲙⲉⲧⲛⲟϫ</span> <i>old age</i>,</li>
+														<li>BIF 14 169 <i class="dialect">S</i> what thy craft <span class="coptic">ⲉⲕⲧⲁⲩⲟ ⲛⲛⲉⲓⲙ.</span> <i>makest these boats</i>?</li>
+													</ul>
+												</li>
+												<li class="subsection"><span class="coptic">ⲣ ⲙⲛⲧⲛ.</span> <i class="dialect">S</i>, <i>do great things</i>:
+													<ul>
+														<li class="group">
+															<ul>
+																<li>Ps 103 1 (<i class="dialect">B</i> <span class="coptic">ⲉⲣ ⲛ.</span>) <span class="greek">μεγαλύνειν</span>,</li>
+																<li>Si 50 24 <span class="greek">μεγαλοποιεῖν</span>.</li>
+															</ul>
+														</li>
+													</ul>
+												</li>
+											</ul>
+										</li>
+										<li class="subsection"><span class="coptic">ⲣ</span>, <span class="coptic">ⲉⲣⲛ.</span> <i class="dialect">S</i><i class="dialect">A</i><i class="dialect">B</i><i class="dialect">F</i>,
+											<ul>
+												<li class="subsection"><b>a</b> <i>become</i>, <i>be great</i>:
+													<ul>
+														<li class="group">
+															<ul>
+																<li></li>
+															</ul>
+														</li>
 													</ul>
 												</li>
 											</ul>
