update dictionary editor

--- a/coptic/dictionary_editor/index.html
+++ b/coptic/dictionary_editor/index.html
@@ -13,9 +13,6 @@
 				<p>Editor for building new entries for etymological dictionaries.</p>
 			</div>
 			<div id="interface">
-				<div id="preview_area">
-					
-				</div>
 				<div id="format_control_buttons">
 					<form action="">
 						<label for="dialect">Dialect</label>
@@ -44,11 +41,14 @@
 							<option value="italic">Italic</option>
 							<option value="qualitative">Qualitative</option>
 						</select>
-						<input type="text" id="dialect_id" name="dialect_name" placeholder="">
+						<input type="text" id="text_id" name="text_name" placeholder="Enter text here.">
 						<!--
 						<input type="submit" value="Submit">
 						-->
 					</form>
+				</div>
+				<div id="preview_area">
+					
 				</div>
 			</div>
 		</div>
