update extended hieroglyphs list

--- a/egyptian/extended/index.html
+++ b/egyptian/extended/index.html
@@ -10,7 +10,7 @@
 			<div id="u_13460"><span class="hex">U+13460</span><span class="dec">78944</span><span class="glyph">⁋</span></div>
 			<div id="u_13461"><span class="hex">U+13461</span><span class="dec">78945</span><span class="glyph">Ⓓ</span></div>
 			<div id="u_13462"><span class="hex">U+13462</span><span class="dec">78946</span><span class="glyph">Ⓔ</span></div>
-			<div id="u_13463"><span class="hex">U+13463</span><span class="dec">78947</span><span class="glyph">ב</span></div>
+			<div id="u_13463"><span class="hex">U+13463</span><span class="dec">78947</span><span class="glyph">ℶ</span></div>
 			<div id="u_13464"><span class="hex">U+13464</span><span class="dec">78948</span><span class="glyph">Ⓖ</span></div>
 			<div id="u_13465"><span class="hex">U+13465</span><span class="dec">78949</span><span class="glyph">Ỗ</span></div>
 			<div id="u_13466"><span class="hex">U+13466</span><span class="dec">78950</span><span class="glyph">ᖺ</span></div>
@@ -39,7 +39,7 @@
 			<div id="u_1347D"><span class="hex">U+1347D</span><span class="dec">78973</span><span class="glyph">ݿ</span></div>
 			<div id="u_1347E"><span class="hex">U+1347E</span><span class="dec">78974</span><span class="glyph"></span></div>
 			<div id="u_1347F"><span class="hex">U+1347F</span><span class="dec">78975</span><span class="glyph">ị</span></div>
-			<div id="u_13480"><span class="hex">U+13480</span><span class="dec">78976</span><span class="glyph">ג</span></div>
+			<div id="u_13480"><span class="hex">U+13480</span><span class="dec">78976</span><span class="glyph">ℷ</span></div>
 			<div id="u_13481"><span class="hex">U+13481</span><span class="dec">78977</span><span class="glyph">֡</span></div>
 			<div id="u_13482"><span class="hex">U+13482</span><span class="dec">78978</span><span class="glyph">⊆</span></div>
 			<div id="u_13483"><span class="hex">U+13483</span><span class="dec">78979</span><span class="glyph">ߢ</span></div>
@@ -98,7 +98,7 @@
 			<div id="u_134B8"><span class="hex">U+134B8</span><span class="dec">79032</span><span class="glyph">≏</span></div>
 			<div id="u_134B9"><span class="hex">U+134B9</span><span class="dec">79033</span><span class="glyph">ޕ</span></div>
 			<div id="u_134BA"><span class="hex">U+134BA</span><span class="dec">79034</span><span class="glyph">ޗ</span></div>
-			<div id="u_134BB"><span class="hex">U+134BB</span><span class="dec">79035</span><span class="glyph">ד</span></div>
+			<div id="u_134BB"><span class="hex">U+134BB</span><span class="dec">79035</span><span class="glyph">ℸ</span></div>
 			<div id="u_134BC"><span class="hex">U+134BC</span><span class="dec">79036</span><span class="glyph">ޘ</span></div>
 			<div id="u_134BD"><span class="hex">U+134BD</span><span class="dec">79037</span><span class="glyph">݂</span></div>
 			<div id="u_134BE"><span class="hex">U+134BE</span><span class="dec">79038</span><span class="glyph">ޙ</span></div>
