--- a/coptic/dictionary_editor/index.html
+++ b/coptic/dictionary_editor/index.html
@@ -7,49 +7,55 @@
 	</head>
 	<body>
 		<h1>Dictionary editor</h1>
-		<div id="hieroglyph_editor">
-			<h2>Crum</h2>
-			<div id="info">
-				<p>Editor for building new entries for etymological dictionaries.</p>
+		<div id="info">
+			<p>Editor for building new entries for etymological dictionaries.</p>
+		</div>
+		<div id="interface">
+			<div id="preview">
+				<fieldset id="rendered_fieldset">
+					<legend>Rendered</legend>
+					<div id="preview_rendered"></div>
+				</fieldset>
+				<fieldset id="markup_fieldset">
+					<legend>Markup</legend>
+					<div id="preview_markup"></div>
+				</fieldset>
 			</div>
-			<div id="interface">
-				<div id="format_control_buttons">
-					<form action="">
-						<label for="dialect">Dialect</label>
-						<select id="dialect" name="dialect">
-							<option value="saidic">Saʿîdic</option>
-							<option value="saidic-a">Saʿîdic with Achmîmic</option>
-							<option value="saidic-f">Saʿîdic with Fayyûmic</option>
-							<option value="bohairic">Bohairic</option>
-							<option value="fayyumic">Fayyûmic</option>
-							<option value="fayyumic-b">Fayyûmic with Bohairic</option>
-							<option value="achmimic">Achmîmic</option>
-							<option value="subachmimic">Subachmîmic</option>
-							<option value="old">Old Coptic</option>
-						</select>
-						<label for="language">Language</label>
-						<select id="language" name="language">
-							<option value="coptic">Coptic</option>
-							<option value="greek">Greek</option>
-							<option value="arabic">Arabic</option>
-							<option value="hebrew">Hebrew</option>
-							<option value="aramaic">Aramaic</option>
-						</select>
-						<label for="formatting">Rich Text</label>
-						<select id="formatting" name="formatting">
-							<option value="bold">Bold</option>
-							<option value="italic">Italic</option>
-							<option value="qualitative">Qualitative</option>
-						</select>
-						<input type="text" id="text_id" name="text_name" placeholder="Enter text here.">
-						<!--
-						<input type="submit" value="Submit">
-						-->
-					</form>
-				</div>
-				<div id="preview_area">
-					
-				</div>
+			<div id="editor_options">
+				<fieldset id="dialect_fieldset">
+					<legend>Dialect</legend>
+					<input type="radio" id="" name="selected_dialect" value="S" checked><label for="">Saʿîdic</label>
+					<input type="radio" id="" name="selected_dialect" value="S<sup>a</sup>"><label for="">Saʿîdic with Achmîmic</label>
+					<input type="radio" id="" name="selected_dialect" value="S<sup>f</sup>"><label for="">Saʿîdic with Fayyûmic</label>
+					<input type="radio" id="" name="selected_dialect" value="B"><label for="">Bohairic</label>
+					<input type="radio" id="" name="selected_dialect" value="F"><label for="">Fayyûmic</label>
+					<input type="radio" id="" name="selected_dialect" value="F<sup>b</sup>"><label for="">Fayyûmic with Bohairic</label>
+					<input type="radio" id="" name="selected_dialect" value="A"><label for="">Achmîmic</label>
+					<input type="radio" id="" name="selected_dialect" value="A<sup>2</sup>"><label for="">Subachmîmic</label>
+					<input type="radio" id="" name="selected_dialect" value="O"><label for="">Old Coptic</label>
+					<input id="add_dialect" type="submit" value="Add dialect">
+				</fieldset>
+				<fieldset id="formatted_fieldset">
+					<legend>Formatted</legend>
+					<input type="radio" id="" name="selected_formatted" value="b" checked><label for="">Bold</label>
+					<input type="radio" id="" name="selected_formatted" value="i"><label for="">Italic</label>
+					<input type="text" id="formatted_text" name="formatted_name" placeholder="Enter text here.">
+					<input id="add_formatted" type="submit" value="Add text">
+				</fieldset>
+				<fieldset id="language_fieldset">
+					<legend>Language</legend>
+					<input type="radio" id="" name="selected_language" value="coptic" checked><label for="">Coptic</label>
+					<input type="radio" id="" name="selected_language" value="greek"><label for="">Greek</label>
+					<input type="radio" id="" name="selected_language" value="arabic"><label for="">Arabic</label>
+					<input type="radio" id="" name="selected_language" value="hebrew"><label for="">Hebrew</label>
+					<input type="radio" id="" name="selected_language" value=""><label for="">Aramaic</label>
+					<input type="text" id="language_text" name="language_name" placeholder="Enter text here.">
+					<input id="add_language" type="submit" value="Add text">
+				</fieldset>
+				<fieldset id="qualitative_fieldset">
+					<legend>Qualitative (<sup>†</sup>)</legend>
+					<input id="add_qualitative" type="submit" value="Add †">
+				</fieldset>
 			</div>
 		</div>
 		<script src="../../scripts/scripts.js"></script>
