create crum scripts, update main, egyptian, crum

--- a/index.html
+++ b/index.html
@@ -7,17 +7,28 @@
 	<body>
 		<h1>Randy Komforty</h1>
 		<h2>Coptic Research</h2>
-		<div>
-			<ul>
+		<div id="container">
+			<ul id="grammars">
+				<h3>Grammars</h3>
 				<li><a href="./coptic/crum/index.html">Crum, <i>A Coptic Dictionary</i></a></li>
 				<li><a href="./coptic/vycichl/index.html">Vycichl, <i>Dictionnaire Étymologique de la Langue Copte</i></a></li>
 				<li><a href="./coptic/mallon/index.html">Mallon, <i>Grammaire Copte</i></a></li>
 				<li><a href="./coptic/westendorf/index.html">Westendorf, <i>Koptisches Handwörterbuch</i></a></li>
 				<li><a href="./coptic/lambdin/index.html">Lambdin, <i>Introduction to Sahidic Coptic</i></a></li>
 			</ul>
+			<ul id="lives">
+				<h3>Saints' Lives</h3>
+				<li><a href="./coptic/lives/hilaria">Life of St. Hilaria</a></li>
+				<li><a href="./coptic/lives/seven_sleepers">Seven Sleepers of Ephesus</a></li>
+			</ul>
+			<ul id="tools">
+				<h3>Egyptological Tools</h3>
+				<li><a href="./egyptian">Visual Editor for Hieroglyphic Font</a></li>
+			</ul>
 		</div>
 		<p>Contact:</p>
 		<p>randykomforty ⳾at⳾ gmail · com</p>
-		<a href="https://ko-fi.com/randykomforty" target="_blank"><img src="./styles/images/ko-fi.webp" alt="Ko-fi link"></a>
+		<!--<a href="https://ko-fi.com/randykomforty" target="_blank"><img src="./styles/images/ko-fi.webp" alt="Ko-fi link"></a>-->
+		<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'J3J5K414T');kofiwidget2.draw();</script> 
 	</body>
 </html>
