--- a/coptic/crum/index.html
+++ b/coptic/crum/index.html
@@ -2572,6 +2572,10 @@
 				</li>
 			</ul>
 		</div>
+		<div id="source_text_for_regex"></div>
+		<!--<div id="destination_text_for_regex"></div>-->
+		<script src="./scripts/scripts.js"></script>
+		<!--<script src="./scripts/load_entries.js"></script>-->
 		<script src="../../scripts/scripts.js"></script>
 	</body>
 </html>
