--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 				<li><a href="./coptic/lives/seven_sleepers">Seven Sleepers of Ephesus</a></li>
 			</ul>
 			<ul id="tools">
-				<h3>Egyptological Tools</h3>
+				<h3>Tools</h3>
+				<li><a href="./coptic/dictionary_editor/index.html">Dictionary Entry Template</a></li>
 				<li><a href="./egyptian">Visual Editor for Hieroglyphic Font</a></li>
 			</ul>
 		</div>
